--- a/new-web/index.html
+++ b/new-web/index.html
@@ -61,7 +61,7 @@
 <script src="js/jquery-2.1.1.min.js"></script>
 <script src="assets/magicsuggest/magicsuggest-min.js"></script>
 <script src="js/d3.min.js"></script>
-<script src="js/heat.js"></script>
+<script src="js/visualization.js"></script>
 <script src="//cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.2/js/bootstrap.js"></script>
 <script src="//cdnjs.cloudflare.com/ajax/libs/bootstrap-select/1.6.3/js/bootstrap-select.js"></script>
 <script type="text/javascript" src="//canvg.googlecode.com/svn/trunk/rgbcolor.js"></script> 
