--- a/new-web/index.html
+++ b/new-web/index.html
@@ -1,92 +1,43 @@
 <!DOCTYPE html>
-<meta charset="utf-8">
+<html>
 <head>
-<style>
-td {
-  padding-left: 10px !important;
-  padding-right: 10px !important;
-}
-</style>
-<link rel="stylesheet" href="dist/css/bootstrap.min.css">
-<link rel="stylesheet" type="text/css" href="dist/css/main.css">
+<meta charset="utf-8">
+
+<link rel="stylesheet" type="text/css" href="./css/main.css">
+<link rel="stylesheet" type="text/css" href="./css/bootstrap/bootstrap.min.css">
 <link href="//cdnjs.cloudflare.com/ajax/libs/bootstrap-select/1.6.3/css/bootstrap-select.css" rel="stylesheet"/>
 </head>
 
 <body>
-<!-- background color E5E7E5 -->
+	<header>
+		<h1>Font Color Semantics</h1>
+		<div class="row">
+			<div class="col-xs-4">
+				<select class="selectpicker" id="typeattr" data-width="160px">
+					<option disabled selected> Select Component </option>
+					<option > Font </option>
+					<option > Color </option>
+				</select>
+			</div>
+			<button type="button" class="btn btn-default" onclick="showViz()" id="doneBtn">Visualize</button>
+			<button type="button" class="btn btn-default" onclick="showBar()" id="doneBtn">Statistics</button>
+		</div>
+			
+	</header>
 
-<div class="everythinig">
+	<div id="viz"></div>
+	<div id="legend"></div>
+	<table id="table"></table>
 
-  
-
-  <div class="left-bar">
-     <div  class="title"><h2>Font Color Semantics</h2></div>
-  <div class="row">
-
-      <div class="col-xs-4">
-            <select class="selectpicker" id="filterattr" data-width="160px">
-            <option disabled selected> Component </option>
-			<option > Font </option>
-			<option > Color </option>
-            </select>
-        </div>
-</div>
-
-<div class="row">
-
-    <button type="button" class="btn btn-default" onclick="render()" style="margin-top: 10pt; float:right" id="doneBtn">Visualize</button>
-
-</div>
-
-<div class="row">
-
-    <button type="button" class="btn btn-default" onclick="showColorStat()" style="margin-top: 10pt; float:right" id="doneBtn">Statistics</button>
-
-</div>
-
-</div>
-  <div class="right-bar">
-
-
-
-	
-    <div class="visualization" >
-
-    </div>
-	
-	<!--<div class="codes" id="colorcodes">
-
-    </div>-->
-	
-	<div class="Legend" id="colorLegend">
-
-    </div>
-
-    <div class="table" id="tableC" display="None">
-        <table id="colorTable" display="None">
-         
-        </table>
-    </div>
-
-     <div class="table" id="tableF" display="None">
-        <table id="fontTable" display="None">
-         
-        </table>
-    </div>
-
-    </div>
-	
-
-  </div> <!--right  bar-->
-
-</div>
-
-<script src="js/jquery-2.1.1.min.js"></script>
-<script src="assets/magicsuggest/magicsuggest-min.js"></script>
-<script src="js/d3.min.js"></script>
-<script src="js/visualization.js"></script>
-<script src="//cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.2/js/bootstrap.js"></script>
-<script src="//cdnjs.cloudflare.com/ajax/libs/bootstrap-select/1.6.3/js/bootstrap-select.js"></script>
+<script type="text/javascript"src="js/jquery-2.1.1.min.js"></script>
+<script type="text/javascript" src="assets/magicsuggest/magicsuggest-min.js"></script>
+<script type="text/javascript" src="js/d3.min.js"></script>
+<script type="text/javascript" src="js/visualization.js"></script>
+<script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.2/js/bootstrap.js"></script>
+<script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/bootstrap-select/1.6.3/js/bootstrap-select.js"></script>
 <script type="text/javascript" src="//canvg.googlecode.com/svn/trunk/rgbcolor.js"></script> 
 <script type="text/javascript" src="//canvg.googlecode.com/svn/trunk/canvg.js"></script>
+
+
 </body>
+</html>
